--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-﻿geemap==0.9.1
-earthengine-api==0.1.272
-streamlit==1.13.0
-streamlit-folium==0.5.0
+geemap==0.10.5
+earthengine-api==0.1.304
+streamlit==1.11.1
+streamlit-folium==0.8.2
 plotly==5.6.0
 pandas==1.3.5
 matplotlib==3.5.1
-altair
+altair==4.2.2
+vega_datasets==0.9.0
