--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 geemap==0.32.1
 earthengine-api==0.1.304
 streamlit==1.11.1
-streamlit-folium==0.8.2
+streamlit-folium 
 plotly==5.6.0
 pandas==1.3.5
 matplotlib==3.5.1
